--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "@types/three": "^0.154.0",
+    "three": "^0.154.0",
     "vue": "^3.3.4",
     "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
