--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/three": "^0.154.0",
+    "dat.gui": "^0.7.9",
     "three": "^0.154.0",
     "vue": "^3.3.4",
     "vue-router": "^4.0.13",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
+    "@types/dat.gui": "^0.7.10",
     "@types/node": "^18.16.17",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/tsconfig": "^0.4.0",
