--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
-    "@types/three": "^0.154.0",
     "dat.gui": "^0.7.9",
+    "gsap": "^3.12.2",
     "three": "^0.154.0",
     "vue": "^3.3.4",
     "vue-router": "^4.0.13",
@@ -20,10 +20,13 @@
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
     "@types/dat.gui": "^0.7.10",
+    "@types/gsap": "^3.0.0",
     "@types/node": "^18.16.17",
+    "@types/three": "^0.154.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.14",
+    "i": "^0.3.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.3",
